--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tremor/react": "^3.17.2",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.0",
+    "@vercel/analytics": "^1.3.1",
     "ai": "^3.4.7",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
