--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@upstash/redis": "^1.34.0",
     "@vercel/analytics": "^1.3.1",
     "ai": "^3.4.7",
+    "assemblyai": "^4.8.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
